feat: implement financial tracking components with movements and recurring records

--- a/frontend/src/app/components/side-nav-component/side-nav-component.html
+++ b/frontend/src/app/components/side-nav-component/side-nav-component.html
@@ -34,15 +34,15 @@
               </a>
               <a
                 mat-list-item
-                routerLink="/config"
+                routerLink="/movements"
                 class="nav-item"
                 routerLinkActive="active"
-                #tlaTracking="routerLinkActive"
+                #movTracking="routerLinkActive"
                 [routerLinkActiveOptions]="{ exact: true }"
-                [attr.aria-current]="tlaTracking.isActive ? 'page' : null"
+                [attr.aria-current]="movTracking.isActive ? 'page' : null"
               >
                 <mat-icon matListItemIcon>insights</mat-icon>
-                <span matListItemTitle>Tracking</span>
+                <span matListItemTitle>Movements</span>
                 <span matListItemLine>Track your expenses</span>
               </a>
               <a
