--- a/frontend/src/app/components/tracking/financial/financial.component.html
+++ b/frontend/src/app/components/tracking/financial/financial.component.html
@@ -1,11 +1,11 @@
-<mat-card appearance="outlined">
+<mat-card appearance="outlined" style="width: 100%">
   @if (loading()) {
     <mat-card-header>
-      <mat-card-title>Loading Configurations...</mat-card-title>
+      <mat-card-title>Loading {{ title() }}...</mat-card-title>
     </mat-card-header>
   } @else {
     <mat-card-header>
-      <mat-card-title>Configurations</mat-card-title>
+      <mat-card-title>{{ title() }}</mat-card-title>
     </mat-card-header>
 
     <mat-card-actions align="end">
@@ -20,7 +20,9 @@
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef>Name</th>
           <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-          <td mat-footer-cell *matFooterCellDef class="footer-cell-label">Totals</td>
+          @if (showFooter()) {
+            <td mat-footer-cell *matFooterCellDef class="footer-cell-label">Totals</td>
+          }
         </ng-container>
 
         <ng-container matColumnDef="description">
@@ -28,19 +30,25 @@
           <td mat-cell *matCellDef="let element" class="description-cell">
             {{ element.description }}
           </td>
-          <td mat-footer-cell *matFooterCellDef>{{ recordCount() }} records</td>
+          @if (showFooter()) {
+            <td mat-footer-cell *matFooterCellDef>{{ recordCount() }} records</td>
+          }
         </ng-container>
 
         <ng-container matColumnDef="recurring">
           <th mat-header-cell *matHeaderCellDef>Recurring</th>
           <td mat-cell *matCellDef="let element">{{ element.recurring ? 'Yes' : 'No' }}</td>
-          <td mat-footer-cell *matFooterCellDef>{{ recurringCount() }} recurring</td>
+          @if (showFooter()) {
+            <td mat-footer-cell *matFooterCellDef>{{ recurringCount() }} recurring</td>
+          }
         </ng-container>
 
         <ng-container matColumnDef="recurrenceFrequency">
           <th mat-header-cell *matHeaderCellDef>Frequency</th>
           <td mat-cell *matCellDef="let element">{{ element.recurrenceFrequency }}</td>
-          <td mat-footer-cell *matFooterCellDef></td>
+          @if (showFooter()) {
+            <td mat-footer-cell *matFooterCellDef></td>
+          }
         </ng-container>
 
         <ng-container matColumnDef="amount">
@@ -48,15 +56,19 @@
           <td mat-cell *matCellDef="let element">
             {{ element.amount | currency: element.currency }}
           </td>
-          <td mat-footer-cell *matFooterCellDef>
-            {{ signedTotalAmount().total | currency: signedTotalAmount().currency }}
-          </td>
+          @if (showFooter()) {
+            <td mat-footer-cell *matFooterCellDef>
+              {{ signedTotalAmount().total | currency: signedTotalAmount().currency }}
+            </td>
+          }
         </ng-container>
 
         <ng-container matColumnDef="date">
           <th mat-header-cell *matHeaderCellDef>Date</th>
           <td mat-cell *matCellDef="let element">{{ element.date | date: 'short' }}</td>
-          <td mat-footer-cell *matFooterCellDef>--</td>
+          @if (showFooter()) {
+            <td mat-footer-cell *matFooterCellDef>--</td>
+          }
         </ng-container>
 
         <ng-container matColumnDef="actions">
@@ -72,12 +84,16 @@
               >delete</mat-icon
             >
           </td>
-          <td mat-footer-cell *matFooterCellDef>--</td>
+          @if (showFooter()) {
+            <td mat-footer-cell *matFooterCellDef>--</td>
+          }
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+        @if (showFooter()) {
+          <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+        }
       </table>
       <mat-paginator
         [pageSizeOptions]="[10, 25, 50, 100]"
