feat: update side nav label from 'Monthly Comparison' to 'Month by Month'

--- a/frontend/src/app/components/side-nav-component/side-nav-component.html
+++ b/frontend/src/app/components/side-nav-component/side-nav-component.html
@@ -68,7 +68,7 @@
                 [attr.aria-current]="analyticsLink.isActive ? 'page' : null"
               >
                 <mat-icon matListItemIcon>analytics</mat-icon>
-                <span matListItemTitle>Monthly Comparison</span>
+                <span matListItemTitle>Month by Month</span>
                 <span matListItemLine>Compare monthly trends</span>
               </a>
               <a
