--- a/frontend/src/app/components/dashboard-component/dashboard-component.component.html
+++ b/frontend/src/app/components/dashboard-component/dashboard-component.component.html
@@ -1,12 +1,12 @@
-<gridster [options]="options">
+<gridster [options]="options" [class.edit-mode]="isEditMode()" class="gridster-container">
   @for (widget of widgets(); track widget) {
     <gridster-item [item]="widget">
-      @switch (widget['component']) {
-        @case ('widget-remaining') {
-          <app-widget-remaining
-            [record]="widget['data']"
-            [loading]="loading()"
-          ></app-widget-remaining>
+      @switch (widget.type) {
+        @case (WidgetType.CurrentBalance) {
+          <app-widget-remaining [isEditMode]="isEditMode()"></app-widget-remaining>
+        }
+        @case (WidgetType.NetGraph) {
+          <app-widget-net-graph [isEditMode]="isEditMode()"></app-widget-net-graph>
         }
         @default {
           <div class="placeholder-widget">
@@ -17,4 +17,9 @@
       }
     </gridster-item>
   }
+  <app-flex justify="flex-end" align="flex-end" class="floating-button">
+    <button matMiniFab type="button" aria-label="Edit Dashboard" (click)="editDashboard()">
+      <mat-icon>edit</mat-icon>
+    </button>
+  </app-flex>
 </gridster>
