--- a/frontend/src/app/components/ui-library/chart-wrapper-component/chart-wrapper-component.component.css
+++ b/frontend/src/app/components/ui-library/chart-wrapper-component/chart-wrapper-component.component.css
@@ -1,9 +1,13 @@
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  height: 100%;
 }
 
 apx-chart {
   display: block;
   width: 100%;
+  height: 100%;
+  flex: 1;
 }
