--- a/frontend/src/app/components/tracking/tracking/tracking.component.html
+++ b/frontend/src/app/components/tracking/tracking/tracking.component.html
@@ -18,7 +18,7 @@
         style="width: 100%"
         [title]="'Recurring Movements'"
         [loading]="loading()"
-        [records]="records()"
+        [records]="recurringRecords()"
       />
     </app-flex>
   }
