--- a/frontend/src/app/components/dashboards/dashboard-drawer-component/dashboard-drawer-component.component.html
+++ b/frontend/src/app/components/dashboards/dashboard-drawer-component/dashboard-drawer-component.component.html
@@ -2,7 +2,7 @@
   <mat-drawer
     #drawer
     [opened]="opened()"
-    mode="side"
+    mode="over"
     position="end"
     (closedStart)="onDrawerClosed()"
   >
@@ -14,9 +14,15 @@
     </app-flex>
     <div class="drawer-content">
       @for (widget of availableWidgets; track widget) {
-        <p>{{ widget.name }}</p>
+        <app-flex justify="space-between" align="center" gap="8px">
+          <div class="widget-item" (click)="addWidgetToDashboard(widget)">
+            Add <strong>{{ widget.name }}</strong> widget
+          </div>
+        </app-flex>
       }
     </div>
   </mat-drawer>
-  <mat-drawer-content><ng-content></ng-content></mat-drawer-content>
+  <mat-drawer-content>
+    <ng-content></ng-content>
+  </mat-drawer-content>
 </mat-drawer-container>
