--- a/frontend/src/app/widgets/widget-net-graph/widget-net-graph.component.html
+++ b/frontend/src/app/widgets/widget-net-graph/widget-net-graph.component.html
@@ -1,9 +1,11 @@
 <app-widget-wrapper
+  [widgetId]="widgetId()"
   [title]="'Yearly Net Graph'"
   [subtitle]="'Net income and expenses over the past year'"
   [icon]="'show_chart'"
   [loading]="loading()"
   [isEditMode]="isEditMode()"
+  (delete)="onDeleteWidget($event)"
 >
   <div class="widget-content">
     <app-chart [chartOptions]="chartOptions()" />
