--- a/frontend/src/app/components/dashboards/dashboard-component/dashboard-component.component.html
+++ b/frontend/src/app/components/dashboards/dashboard-component/dashboard-component.component.html
@@ -10,10 +10,18 @@
           @if (widget.id !== undefined) {
             @switch (widget.type) {
               @case (WidgetType.CURRENT_BALANCE) {
-                <app-widget-remaining [isEditMode]="isEditMode()" [widgetId]="widget.id" (delete)="removeItem($event)"></app-widget-remaining>
+                <app-widget-remaining
+                  [isEditMode]="isEditMode()"
+                  [widgetId]="widget.id"
+                  (delete)="removeItem($event)"
+                ></app-widget-remaining>
               }
               @case (WidgetType.NET_GRAPH) {
-                <app-widget-net-graph [isEditMode]="isEditMode()" [widgetId]="widget.id" (delete)="removeItem($event)"></app-widget-net-graph>
+                <app-widget-net-graph
+                  [isEditMode]="isEditMode()"
+                  [widgetId]="widget.id"
+                  (delete)="removeItem($event)"
+                ></app-widget-net-graph>
               }
               @default {
                 <div class="placeholder-widget">
